--- a/Pages/Account/LoginTwoFactorWithAuthenticator.cshtml
+++ b/Pages/Account/LoginTwoFactorWithAuthenticator.cshtml
@@ -47,12 +47,17 @@
                             <div class="row">
                                 <div class="col-2"></div>
                                 <div class="col-3 me-4">
-                                    <button type="submit" class="btn create-btn" style="width:140px;">Verify</button>
+                                    <button type="submit" class="btn create-btn" style="width:140px;">
+                                        <i class="fas fa-check-circle"></i> Verify
+                                    </button>
                                 </div>
                                 <div class="col-4 ms-3">
-                                    <input type="hidden" asp-for="AuthenticatorMFAData.RememberMe" />
+                                    <button type="button" class="btn btn-outline-danger" style="width:140px;" onclick="logoutUser();">
+                                        <i class="fas fa-sign-out-alt"></i> Logout
+                                    </button>
                                 </div>
                                 <div class="col-3"></div>
+                                <input type="hidden" asp-for="AuthenticatorMFAData.RememberMe" />
                             </div>
                         </div>
                     </div>
