--- a/Pages/Account/Logout.cshtml
+++ b/Pages/Account/Logout.cshtml
@@ -4,6 +4,23 @@
     ViewData["Title"] = "Logout";
     TempData["NavigationalPageName"] = "Logout";
 }
+
+<header>
+    <h1>@ViewData["Title"]</h1>
+    @{
+        if(User.Identity?.IsAuthenticated ?? false)
+        {
+            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl = "@Url.Page("/", new {area = ""})">
+                <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
+            </form>
+        }
+        else
+        {
+            <p>You have successfully logged out of the application.</p>
+        }
+    }
+</header>
+
 @section scripts {
     <partial name="_ValidationScriptsPartial" />
 }
